--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
+aiosmtplib==3.0.2
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.8.0
-bcrypt==4.2.1
+APScheduler==3.11.0
+bcrypt==4.0.1
+blinker==1.9.0
 certifi==2024.12.14
 click==8.1.8
+dnspython==2.7.0
 ecdsa==0.19.0
+email_validator==2.2.0
 fastapi==0.115.6
+fastapi-mail==1.4.2
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 iniconfig==2.0.0
+Jinja2==3.1.5
 Mako==1.3.8
 MarkupSafe==3.0.2
 packaging==24.2
@@ -18,18 +25,18 @@ passlib==1.7.4
 pluggy==1.5.0
 pyasn1==0.6.1
 pydantic==2.10.5
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pytest==8.3.4
 python-decouple==3.8
 python-dotenv==1.0.1
 python-jose==3.3.0
+python-multipart==0.0.20
 rsa==4.9
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.41.3
 typing_extensions==4.12.2
+tzlocal==5.2
 uvicorn==0.34.0
-pydantic[email]
-python-multipart
-fastapi_mail
